--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,15 +1,16 @@
 <div id="comments"></div>
-<link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
-<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
-  <script>
-    var gitment = new Gitment({
-      owner: 'Hagb',
-      repo: 'hagb.github.io',
-      oauth: {
-        client_id: '79a995edb1d13224e424',
-        client_secret: '0a90186b175db31d16b3dd486260a3590eac9f24',
-      },
-    })
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
+<script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+<script>
+const gitalk = new Gitalk({
+  clientID: '79a995edb1d13224e424',
+  clientSecret: '0a90186b175db31d16b3dd486260a3590eac9f24',
+  repo: 'hagb.github,io',      // The repository of store comments,
+  owner: 'Hagb',
+  admin: ['Hagb'],
+  id: location.pathname,      // Ensure uniqueness and length less than 50
+  distractionFreeMode: false  // Facebook-like distraction free mode
+})
 
-    gitment.render('comments')
+gitalk.render('comments')
 </script>
