--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -5,7 +5,7 @@
 const gitalk = new Gitalk({
   clientID: '79a995edb1d13224e424',
   clientSecret: '0a90186b175db31d16b3dd486260a3590eac9f24',
-  repo: 'hagb.github,io',      // The repository of store comments,
+  repo: 'hagb.github.io',      // The repository of store comments,
   owner: 'Hagb',
   admin: ['Hagb'],
   id: location.pathname,      // Ensure uniqueness and length less than 50
