--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,6 +1,7 @@
 <div id="comments"></div>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
 <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+<script type="text/javascript" src="//cdn.bootcss.com/blueimp-md5/2.10.0/js/md5.js?v=0.0.0"></script>
 <script>
 const gitalk = new Gitalk({
   clientID: '79a995edb1d13224e424',
@@ -8,7 +9,7 @@ const gitalk = new Gitalk({
   repo: 'hagb.github.io',      // The repository of store comments,
   owner: 'Hagb',
   admin: ['Hagb'],
-  id: location.pathname,      // Ensure uniqueness and length less than 50
+  id: md5(location.pathname),      // Ensure uniqueness and length less than 50
   distractionFreeMode: false  // Facebook-like distraction free mode
 })
 
