--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
     </div>
     <div class="footer-col-wrapper">
       <div class="footer-col">
-	   <p> 若无特别说明，本站内容均以 CC-BY-SA 3.0 发布。<br \>
+	   <p> <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This site is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a><br />
 	       Copyright © {{ site.since }} {{ site.since & "-" }} {{ site.time | date: '%Y' }} {{ site.author }}<p></div>
       </div>
      </div>
